# fittok

./: .gitignore  LICENSE  README.md  RELEASE.md  pyproject.toml  server.json
.github/workflows/: publish-mcp.yml
demo/: package-lock.json  package.json
demo/src/: FittokDemo.tsx  Root.tsx
docs/: HANDBOOK.md  RESULTS.md
examples/: usage.py
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: fittok_hook.py  hooks.json
plugin/skills/fittok/: SKILL.md
src/context_optimizer/: __init__.py  __main__.py  cache.py  cli.py  embeddings.py  graphify.py  indexer.py  llmlingua_wrapper.py  server.py  slurp.py  tokens.py  ui.py
src/fittok/: __init__.py  __main__.py  cache.py  cli.py  diff.py  embeddings.py  graph_viz.py  graphify.py  indexer.py  llmlingua_wrapper.py  models.py  pii_scrubber.py  server.py  slurp.py  tokens.py  ui.py  watcher.py
tests/: test_cache.py  test_diff.py  test_graphify.py  test_llmlingua.py  test_pii_scrubber.py  test_robustness.py  test_server.py  test_server_v2.py  test_slurp.py
