[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fittok"
version = "0.3.6"
description = "MCP server that retrieves the most relevant source code for a query, within a token budget"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fittok Contributors" }]
keywords = ["mcp", "llm", "context", "code-analysis", "retrieval", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0",
    "tiktoken>=0.7.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.22.0",
    "tree-sitter-javascript>=0.22.0",
    "tree-sitter-typescript>=0.22.0",
    "tree-sitter-java>=0.22.0",
    "tree-sitter-go>=0.22.0",
    "tree-sitter-rust>=0.22.0",
    "networkx>=3.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    # llmlingua is only used by the standalone compress_context tool; it pulls in
    # transformers, which MUST stay <5 — transformers 5.x breaks llmlingua's
    # model loading (the bug we hit). Pin it so a fresh install just works.
    "transformers>=4.41,<5",
    "llmlingua>=0.0.5",
    "python-dotenv>=1.0",
    "diskcache>=5.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]
gpu = [
    "torch>=2.0",
]
ui = [
    "gradio>=4.0",
    "pyvis>=0.3",
]

[project.urls]
Homepage = "https://github.com/likhithreddy/fittok"
Repository = "https://github.com/likhithreddy/fittok"
Issues = "https://github.com/likhithreddy/fittok/issues"

[project.scripts]
fittok = "fittok.cli:main"
fittok-index = "fittok.indexer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fittok"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
